Bug 83728 - FILEOPEN: Regression importing .docx header position lost
Summary: FILEOPEN: Regression importing .docx header position lost
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0
Keywords: bibisected, filter:docx, regression
Depends on:
Blocks:
 
Reported: 2014-09-10 19:00 UTC by Luke
Modified: 2015-12-17 04:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot highlighting the issue (440.41 KB, image/png)
2014-09-10 19:00 UTC, Luke
Details
stripped-down version of this file (38.11 KB, application/vnd.ms-word.document.12)
2014-09-10 19:01 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-09-10 19:00:12 UTC
Created attachment 106077 [details]
Screenshot highlighting the issue

This bug was tested LibreOffice v4.4 on Win 7 and Linux. The latest builds of LO lose the header position.

Steps to reproduce the bug:
1. Open  attachment 81835 [details] document in writer v4.4 before 9/3
2. Open  attachment 81835 [details] document in writer v4.4 after 9/6
3. Compare the documents. 

Note in the screenshot that the header is incorrectly positioned to the far left of the screen.
Comment 1 Luke 2014-09-10 19:01:59 UTC
Created attachment 106078 [details]
stripped-down version of this file

libo-master~2014-09-03_10.10.14: PASS
libo-master~2014-09-06_05.59.30: FAIL
Comment 2 Yousuf Philips (jay) (retired) 2014-09-13 00:21:30 UTC
I can confirm that the header is on the left rather than being on the right when opened in Word 2010 and LibO 4.2.6.

Version: 4.4.0.0.alpha0+
Build ID: ed95e1c5619e2cb2a8f6d93a1b7c45f36f1524dd
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-09-12_11:30:45
Comment 3 Yousuf Philips (jay) (retired) 2014-09-13 00:24:20 UTC
Its fine in 4.3.3 daily, so its likely only broken in master.

Version: 4.3.3.0.0+
Build ID: f3cdb7804a26c5cf0623d9b83130594f83372768
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-4-3, Time: 2014-09-12_04:11:44
Comment 4 Xisco Faulí 2014-09-16 14:16:57 UTC
Issue introduced in range ec8754183825c3889eae7614433fba5727310e19..0a8bf4b534775bb64e6baa228dce881c5c0d65a5
Comment 5 Luke 2014-09-17 01:04:45 UTC
Miklos made a some changes to the OOXML filter in that range like
Use NS_ooxml::LN_Value_ST_Jc_{right,end} constants 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=614b31615e69b527e669635245cf59faf9c9e2fc
and
writerfilter: fix out of bound array access in ST_Jc's "both" case
http://cgit.freedesktop.org/libreoffice/core/commit/?id=99987e325b931fcceea2e587255a01a8ae571191

could one of those be responsible?
Comment 6 Miklos Vajna 2014-09-19 11:51:20 UTC
Yes, this is a regression from 614b31615e69b527e669635245cf59faf9c9e2fc, will take care of it.
Comment 7 Commit Notification 2014-09-19 12:56:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e85d8f9c5aadee9872ec6d7f33567f9ed84b478d

fdo#83728 DOCX import: fix table alignment



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Luke 2014-09-20 18:35:35 UTC
Verified FIXED in 
Version: 4.4.0.0.alpha0+
Build ID: be775a1ab40ccedfbc9659120b82867d6c128e6a
TinderBox: Win-x86@39, Branch:master, Time: 2014-09-19_18:16:31

Impressive work Miklos! Thanks for fixing this.
Comment 9 Robinson Tryon (qubit) 2015-12-17 04:36:52 UTC Comment hidden (obsolete)