fdo#83728 DOCX import: fix table alignment

Regression from 614b31615e69b527e669635245cf59faf9c9e2fc (Use
NS_ooxml::LN_Value_ST_Jc_{right,end} constants, 2014-09-05), one more
remnant from doctok.

Change-Id: Ibab68eada337a3fe1bc919987a09a8b146f86ac9